--- a/css/homepage.css
+++ b/css/homepage.css
@@ -3,7 +3,7 @@
 .carousel_wrapper {
   position: relative;
   max-width: 100%;
-  margin: 0 auto var(--spacing-md);
+  margin: 0 auto var(--spacing-sm);
   padding: 0;
   overflow: hidden;
   
